GNOME Bugzilla – Bug 770799
BT.2020 RGB conversion matrix is wrong
Last modified: 2016-09-03 18:56:36 UTC
Created attachment 334716 [details] [review] video-sink: Fix colors in UHD videos Somebody on reddit noticed that UHD videos have the wrong colors in totem [1]. This seems to be due to the BT.2020 YUV to RGB conversion matrix being wrong. I've recalculated this matrix based on the values found in [2]. Apparently the original matrix just had two positions and signs changed. [1] https://www.reddit.com/r/Fedora/comments/50vcqy/wrong_colours_in_totem/ [2] http://www.itu.int/rec/R-REC-BT.2020-2-201510-I/en
Created attachment 334717 [details] Comparison with VLC before the patch
Created attachment 334718 [details] Comparison with VLC after the patch
Review of attachment 334716 [details] [review]: Looks good! Thanks a lot for looking into this.
Review of attachment 334716 [details] [review]: Pushed to clutter-gst-3.0 branch.