video-sink: Fix colors in UHD videos

The BT.2020 YUV to RGB conversion matrix was wrong.

https://bugzilla.gnome.org/show_bug.cgi?id=770799